fix hot bug